# Fast-Tracker

./: readme.md  record.sh
files/: Tracker.world  tracker.launch
src/d2p/launch/: d2p.launch
src/d2p/rviz/: detector.rviz
src/d2p/src/: main.cpp
src/gazebo_extra_plugins/scripts/: keyboard_actor.py  keyboard_actor_pyqt.py  keyboard_teleop.py
src/px4ctrl/config/: ctrl_param_fpv_real.yaml
src/px4ctrl/launch/: real.launch  singl_run.launch  takeof_real.sh  takeoff.sh
src/px4ctrl/thrust_calibrate_scrips/: thrust_calibrate.py
src/tracker/detection/target_ekf/: CMakeLists.txt
src/tracker/detection/target_ekf/scripts/: detect_ros.py
src/tracker/detection/target_ekf/src/: target_ekf_node.cpp
src/tracker/mapping/config/: rviz_sim.rviz
src/tracker/mapping/launch/: mapping.launch
src/tracker/mapping/src/: mapping_nodelet.cpp
src/tracker/planning/planning/include/prediction/: new_predicition.hpp
src/tracker/planning/planning/launch/: bug.launch  planning.launch  realplanning.launch  simulation1.launch
src/tracker/planning/planning/src/: planning_nodelet.cpp
